Добавленые новые методы для сохранения, добавлен новый метод для обновления счётчика, внесены правки согласно замечаниям